adding Dockerfile and Jenkinsfile plus modified kafka-run-class.sh build.gradle and gradle.properties which were updated for IBM Semeru JDK